[gd_scene load_steps=4 format=2]

[ext_resource path="res://mandel_forest_map_test.png" type="Texture" id=1]
[ext_resource path="res://hair00.png" type="Texture" id=2]
[ext_resource path="res://Minimap.gd" type="Script" id=3]

[node name="Minimap" type="MarginContainer"]
pause_mode = 2
margin_right = 156.0
margin_bottom = 52.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 151.0
margin_bottom = 47.0
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 151.0
margin_bottom = 47.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 141.0
margin_bottom = 37.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
position = Vector2( 17.1217, 15.7095 )
texture = ExtResource( 2 )

[node name="EnemyMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
modulate = Color( 0.537255, 1, 0.0313726, 1 )
position = Vector2( 9.0202, 7.68233 )
texture = ExtResource( 2 )

[node name="AlertMarker" type="Sprite" parent="MarginContainer/Grid"]
visible = false
modulate = Color( 0.101961, 0.0862745, 0.392157, 1 )
position = Vector2( 24.8515, 24.7029 )
texture = ExtResource( 2 )
